<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.ProfileFragment">

    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/intro"
        android:src="@drawable/home_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textview_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_profile" />

    <Button
        android:id="@+id/home_follow_btn"
        android:layout_width="0dp"
        android:layout_margin="5dp"
        android:text="@string/list_follow"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_custom_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_profile_user_name"
        app:layout_constraintEnd_toStartOf="@id/home_repos_btn"/>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/home_repos_btn"
        android:layout_width="0dp"
        android:text="@string/list_follow"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_custom_state"
        app:layout_constraintTop_toBottomOf="@id/textview_profile_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/home_follow_btn"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/profile_fragmentview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/home_repos_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>